# vrx_ws

./: .gitignore  README.md  run_env.sh  run_perception.sh  runa.sh
.catkin_tools/profiles/default/: devel_collisions.txt
drafts/lidar/: euc_clustering.ipynb  lid.ipynb
src/controllers/: CMakeLists.txt
src/controllers/include/controllers/: pid.h
src/controllers/src/: pid.cpp
src/navigation/: CMakeLists.txt  package.xml
src/navigation/include/navigation/: wamv.h
src/navigation/launch/: nav.launch
src/navigation/src/: nav.cpp  wamv.cpp
src/perception/: .gitignore  CMakeLists.txt  ContourDetection.ipynb  README.md  classes.txt  export.launch  lidar_test.ipynb  package.xml  setup.py
src/perception/2022-01-27/distant_objects/front_left_camera/: frame0000.xml  frame0001.xml  frame0002.xml  frame0003.xml  frame0004.xml  frame0005.xml  frame0006.xml  frame0007.xml  frame0008.xml  frame0009.xml  frame0010.xml  frame0011.xml  frame0012.xml  frame0013.xml  frame0014.xml  frame0015.xml  frame0016.xml  frame0017.xml  frame0018.xml  frame0019.xml
src/perception/annotations/: label_map.pbtxt
src/perception/debug_lidar_frames/: numfile1.npy  numfile12.npy  numfile13.npy  numfile2.npy  numfile24.npy  numfile25.npy  numfile3.npy  numfile36.npy  numfile37.npy  numfile4.npy  numfile48.npy  numfile49.npy  numfile5.npy  numfile6.npy
src/perception/launch/: data.launch  eyes.launch
src/perception/models/my_model/checkpoint/: ckpt-0.index
src/perception/models/ssd_mobilenet_14_03_22/checkpoint/: checkpoint
src/perception/scripts/: data_collection  vrx_eyes
src/tasks/: CMakeLists.txt  package.xml
src/tasks/include/tasks/: processing.h
src/tasks/launch/: tasks.launch
src/tasks/src/: processing.cpp  tasks.cpp
src/tasks/urdf/: thruster_config.xacro  wamv.urdf
src/vision/: inference_test.ipynb  requirements.txt  test.ipynb  test1.ipynb
src/vision/models/my_model/checkpoint/: checkpoint
src/vision/models/my_model/saved_model/variables/: variables.index
src/vision/models/ssd_mobilenet_14_03_22/: pipeline.config
src/vision/models/ssd_mobilenet_14_03_22/checkpoint/: ckpt-0.index
src/vision/perspective/images/: perspectivetransform.ipynb
(+1 files in other folders)
