<?xml version="1.0"?>
<package format="2">
    <name>perception</name>
    <version>0.0.0</version>
    <description>The perception package</description>
    <maintainer email="kevin@virtanatech.com">Kevin Sankar</maintainer>
    <license>BSD</license>

    <!-- The *depend tags are used to specify dependencies -->
    <!-- Dependencies can be catkin packages or system dependencies -->
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>rospy</build_depend>
    <build_depend>rosbag</build_depend>
    <build_export_depend>rospy</build_export_depend>
    <build_export_depend>rosbag</build_export_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>rosbag</exec_depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->
    </export>
</package>
